@@ -1,4 +1,5 @@
 4.1 [Next Release]:
+- Fixed language file warning
 
 4.0:
 - Added NoCheatPlus, AntiCheat data sending to mcbans
